src/test/ui/error-codes/E0396-fixed.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/E0396-fixed.rs:5:28
   |
LL | const VALUE: u8 = unsafe { *REG_ADDR };
   |                            ^^^^^^^^^ 0x5f3759df is not a valid pointer

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
